--- a/LESSONS/lesson14/lesson14_5.ipynb
+++ b/LESSONS/lesson14/lesson14_5.ipynb
@@ -668,6 +668,192 @@
     "df1['average']=sum/5\n",
     "df1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>subjects</th>\n",
+       "      <th>Chinese</th>\n",
+       "      <th>English</th>\n",
+       "      <th>Math</th>\n",
+       "      <th>Geography</th>\n",
+       "      <th>History</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>average</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學號</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>75</td>\n",
+       "      <td>56</td>\n",
+       "      <td>53</td>\n",
+       "      <td>51</td>\n",
+       "      <td>85</td>\n",
+       "      <td>320</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>67</td>\n",
+       "      <td>59</td>\n",
+       "      <td>52</td>\n",
+       "      <td>69</td>\n",
+       "      <td>78</td>\n",
+       "      <td>325</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>57</td>\n",
+       "      <td>52</td>\n",
+       "      <td>99</td>\n",
+       "      <td>89</td>\n",
+       "      <td>53</td>\n",
+       "      <td>350</td>\n",
+       "      <td>70.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>94</td>\n",
+       "      <td>57</td>\n",
+       "      <td>77</td>\n",
+       "      <td>92</td>\n",
+       "      <td>83</td>\n",
+       "      <td>403</td>\n",
+       "      <td>80.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>65</td>\n",
+       "      <td>57</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>70</td>\n",
+       "      <td>320</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>94</td>\n",
+       "      <td>53</td>\n",
+       "      <td>58</td>\n",
+       "      <td>86</td>\n",
+       "      <td>69</td>\n",
+       "      <td>360</td>\n",
+       "      <td>72.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>55</td>\n",
+       "      <td>59</td>\n",
+       "      <td>96</td>\n",
+       "      <td>54</td>\n",
+       "      <td>82</td>\n",
+       "      <td>346</td>\n",
+       "      <td>69.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>80</td>\n",
+       "      <td>53</td>\n",
+       "      <td>83</td>\n",
+       "      <td>97</td>\n",
+       "      <td>83</td>\n",
+       "      <td>396</td>\n",
+       "      <td>79.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>86</td>\n",
+       "      <td>58</td>\n",
+       "      <td>79</td>\n",
+       "      <td>97</td>\n",
+       "      <td>63</td>\n",
+       "      <td>383</td>\n",
+       "      <td>76.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>58</td>\n",
+       "      <td>58</td>\n",
+       "      <td>71</td>\n",
+       "      <td>81</td>\n",
+       "      <td>87</td>\n",
+       "      <td>355</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>89</td>\n",
+       "      <td>52</td>\n",
+       "      <td>86</td>\n",
+       "      <td>60</td>\n",
+       "      <td>70</td>\n",
+       "      <td>357</td>\n",
+       "      <td>71.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "subjects  Chinese  English  Math  Geography  History   總分  average\n",
+       "學號                                                                \n",
+       "4              75       56    53         51       85  320     64.0\n",
+       "6              67       59    52         69       78  325     65.0\n",
+       "9              57       52    99         89       53  350     70.0\n",
+       "21             94       57    77         92       83  403     80.6\n",
+       "28             65       57    76         52       70  320     64.0\n",
+       "29             94       53    58         86       69  360     72.0\n",
+       "30             55       59    96         54       82  346     69.2\n",
+       "31             80       53    83         97       83  396     79.2\n",
+       "37             86       58    79         97       63  383     76.6\n",
+       "40             58       58    71         81       87  355     71.0\n",
+       "43             89       52    86         60       70  357     71.4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E_series=df1['English']<60\n",
+    "df1[E_series]"
+   ]
   }
  ],
  "metadata": {
